--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
             <a href="#">Igbo</a>
             <a href="#">Èdè Yorùbá</a>
             <a href="#">Nigerian Pidgin</a>
-        </p>
         </div>
 
     </main>
@@ -52,7 +51,8 @@
                 <a>How search Works</a>
             </div>
 
-            <a>Carbon Neutral Since 2007 </a>
+            <a>
+                <img src="leaf.png" height="15px"/> Carbon neutral since 2007 </a>
 
             <div class="footer_right">
                 <a>Privacy</a>
